--- a/RCC—MCO输出/Project/Fire_F103ZE.uvprojx
+++ b/RCC—MCO输出/Project/Fire_F103ZE.uvprojx
@@ -7,7 +7,7 @@
 
   <Targets>
     <Target>
-      <TargetName>停止模式</TargetName>
+      <TargetName>MCO</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
       <pCCUsed>5060528::V5.06 update 5 (build 528)::ARMCC</pCCUsed>
@@ -639,21 +639,6 @@
               <FileName>bsp_led.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\User\led\bsp_led.c</FilePath>
-            </File>
-            <File>
-              <FileName>bsp_debug_usart.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\User\usart\bsp_debug_usart.c</FilePath>
-            </File>
-            <File>
-              <FileName>bsp_clkconfig.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\User\TIM\bsp_clkconfig.c</FilePath>
-            </File>
-            <File>
-              <FileName>bsp_mcooutput.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\User\TIM\bsp_mcooutput.c</FilePath>
             </File>
           </Files>
         </Group>
