HAL库很强大，关于时间计算函数都封装很完善

--- a/RTC—日历/Project/Fire_F103ZE.uvprojx
+++ b/RTC—日历/Project/Fire_F103ZE.uvprojx
@@ -660,6 +660,11 @@
               <FileType>1</FileType>
               <FilePath>..\User\flash\bsp_spi_flash.c</FilePath>
             </File>
+            <File>
+              <FileName>bsp_rtc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\rtc\bsp_rtc.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
