--- a/WWDG—窗口看门狗/Project/Fire_F103ZE.uvprojx
+++ b/WWDG—窗口看门狗/Project/Fire_F103ZE.uvprojx
@@ -7,7 +7,7 @@
 
   <Targets>
     <Target>
-      <TargetName>串口</TargetName>
+      <TargetName>WWDG</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
       <pCCUsed>5060528::V5.06 update 5 (build 528)::ARMCC</pCCUsed>
@@ -336,7 +336,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F103xE</Define>
               <Undefine></Undefine>
-              <IncludePath>..\Libraries\CMSIS\Include;..\Libraries\CMSIS\Device\ST\STM32F1xx\Include;..\Libraries\STM32F1xx_HAL_Driver\Inc;..\User;..\User\led</IncludePath>
+              <IncludePath>..\Libraries\CMSIS\Include;..\Libraries\CMSIS\Device\ST\STM32F1xx\Include;..\Libraries\STM32F1xx_HAL_Driver\Inc;..\User;..\User\led;..\User\wwdg</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -644,6 +644,11 @@
               <FileName>bsp_debug_usart.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\User\usart\bsp_debug_usart.c</FilePath>
+            </File>
+            <File>
+              <FileName>bsp_wwdg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\wwdg\bsp_wwdg.c</FilePath>
             </File>
           </Files>
         </Group>
