--- a/读写内部FLASH/Project/Fire_F103ZE.uvprojx
+++ b/读写内部FLASH/Project/Fire_F103ZE.uvprojx
@@ -645,6 +645,11 @@
               <FileType>1</FileType>
               <FilePath>..\User\usart\bsp_debug_usart.c</FilePath>
             </File>
+            <File>
+              <FileName>bsp_internal_flash.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\internal_flash\bsp_internal_flash.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
